# netlogo-to-messir

./: .gitignore  AUDIT_DATA_ATTRIBUTE_HYPOTHESES.md  AUDIT_IMPROVEMENTS_SUMMARY.md  AUDIT_INPUT_INSTRUCTIONS_DIFFERENCES.md  AUDIT_REPORT_utils_audit_diagram.md  AUDIT_REPORT_utils_audit_diagram_COMPLETE.md  AUDIT_REPORT_utils_audit_diagram_UPDATED.md  AUDIT_REPORT_utils_audit_operation_model.md  AUDIT_REPORT_utils_audit_scenario.md  AUDIT_UNIWH_DIFFERENCES.md  LDR20_EDGE_CASES.md  README.md  REQUIREMENTS.md  Workflow_summary.md  agent_1_netlogo_abstract_syntax_extractor.py  agent_1_syntax_parser.py  agent_2_netlogo_behavior_extractor.py  agent_2_semantics_parser.py  agent_2a_netlogo_interface_image_analyzer.py  agent_2b_netlogo_behavior_extractor.py  agent_3_lucim_environment_synthesizer.py  agent_3_messir_concepts_mapper.py  agent_4_lucim_scenario_synthesizer.py  agent_4_scenario_writer.py  agent_5_plantuml_writer.py  agent_6_plantuml_auditor.py  agent_7_plantuml_corrector.py  agent_lucim_operation_auditor.py  agent_lucim_operation_generator.py  agent_lucim_plantuml_diagram_auditor.py  agent_lucim_plantuml_diagram_generator.py  agent_lucim_scenario_auditor.py  agent_lucim_scenario_generator.py  analyze_adk_run_results.py  audit_all_runs.py  audit_raw_vs_data_comparison.py  check_adk_installation.py  check_openrouter_config.py  compare_orchestrators.py  config.py  (+83 more)
archive/: PSN_1_NetLogoAbstractSyntaxExtractor-v4.md  PSN_2_NetlogoSemanticsParser-v3.md  agent_1_netlogo_abstract_syntax_extractor.py  agent_2a_netlogo_interface_image_analyzer.py  analyze_json_error.py  (+7 more)
(+96 files in other folders)
